CB-22029 Downscale does not downcale from CM and it does not terminate instances